feat: 添加侧边栏AI分析功能，并实现设置管理、API密钥验证及AI核心逻辑。

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>temp_init</title>
+    <title>Zhiyue Extension Dev</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div style="font-family: system-ui; padding: 2rem; max-width: 600px; margin: 0 auto;">
+      <h1>Zhiyue Extension Dev Server</h1>
+      <p>This is a browser extension project. To develop:</p>
+      <ol>
+        <li>Load the <code>dist</code> folder in Chrome Extensions (Developer Mode).</li>
+        <li>Open the Side Panel in the browser.</li>
+      </ol>
+      <p><em>(The root index.html is just a placeholder and not part of the extension build)</em></p>
+    </div>
   </body>
 </html>
